콘솔에러 수정(02에서는 안 됨 why?)

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
-    <script src="./chapter/Mission-01/01.bringMeKey.js"></script>
+    <script src="./chapter/Mission-01/02.bringMeIndex.js"></script>
   </head>
   <body>
     <h1>
